# Description: TensorFlow IPFS FileSystem implementation.

licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

# open source marker; do not remove

package_group(
    name = "internal",
    packages = [
        "//iptf/...",
    ],
)

py_library(
    name = "iptf_py",
    srcs = ["__init__.py"],
    srcs_version = "PY2AND3",
    visibility = ["//visibility:public"],
    data = [
      "//iptf/go/c_api:libipfs.so",
    ],
)
