load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "child.go",
        "dynamic.go",
        "meta_file_system.go",
        "missing.go",
    ],
    deps = [
        "//iptf/go/api:go_default_library",
        "//iptf/go/rw:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
