load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "raw_file_system.go",
    ],
    deps = [
        "//iptf/go/api:go_default_library",
        "@com_github_ipfs_go_ipfs//core:go_default_library",
        "@com_github_ipfs_go_ipfs//merkledag:go_default_library",
        "@com_github_ipfs_go_ipfs//namesys:go_default_library",
        "@com_github_ipfs_go_ipfs//path:go_default_library",
        "@com_github_ipfs_go_ipfs//unixfs:go_default_library",
        "@com_github_ipfs_go_ipfs//unixfs/pb:go_default_library",
        "@com_github_ipfs_go_ipfs//unixfs/io:go_default_library",
        "@com_github_ipfs_go_ipld_format//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
